<resources>
    <string name="app_name">Ubuntu Man Pages</string>

    <!-- Distribution Names -->

    <string name="ubuntu_name">Ubuntu</string>

    <!-- Menu Button Names -->
    <string name="resync_button">Re-Sync Data</string>
    <string name="tabs_on_bottom">Tabs on Bottom</string>
    <string name="search_on_bottom">Search on Bottom</string>
    <string name="change_release_button">Change Release</string>
    <string name="privacy_policy_button">Privacy Policy</string>
    <string name="store_pages_offline">Store Offline</string>
    <string name="sort_button">Sort Order</string>


    <!-- Placeholders -->
    <string name="header">Header</string>
    <string name="text">text</string>
    <string name="placeholder_description" formatted="true">\u003cpre\u003e       Git is a fast, scalable, distributed revision control system with an unusually rich\n       command set that provides both high-level operations and full access to internals.\n\n       See \u003cb\u003e\u003ca href\u003d\"../man7/gittutorial.7.html\"\u003egittutorial\u003c/a\u003e\u003c/b\u003e(7) to get started, then see \u003cb\u003e\u003ca href\u003d\"../man7/giteveryday.7.html\"\u003egiteveryday\u003c/a\u003e\u003c/b\u003e(7) for a useful minimum set of\n       commands. The \u003cb\u003eGit\u003c/b\u003e \u003cb\u003eUser’s\u003c/b\u003e \u003cb\u003eManual\u003c/b\u003e[1] has a more in-depth introduction.\n\n       After you mastered the basic concepts, you can come back to this page to learn what\n       commands Git offers. You can learn more about individual Git commands with \"git help\n       command\". \u003cb\u003e\u003ca href\u003d\"../man7/gitcli.7.html\"\u003egitcli\u003c/a\u003e\u003c/b\u003e(7) manual page gives you an overview of the command-line command syntax.\n\n       A formatted and hyperlinked copy of the latest Git documentation can be viewed at\n       \u003cb\u003ehttps://git.github.io/htmldocs/git.html\u003c/b\u003e or \u003cb\u003ehttps://git-scm.com/docs\u003c/b\u003e.\n\n\u003c/pre\u003e</string>


    <!-- Find Command strings -->
    <string name="search_command">Search Command</string>
    <string name="search_description">Search Description</string>

    <string name="search_man_page">search in man page.</string>

    <!-- Preference Values -->
    <string name="default_url">https://manpages.ubuntu.com/manpages/</string>


    <!-- Error Messages -->
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="manpage_parse_error">The html response was either null or empty.</string>

    <!-- Content Descriptions -->
    <string name="app_settings">App Settings</string>
    <string name="jump_to_section">Jump to section</string>
    <string name="search_text_in_page">Search text in %s manpage</string>
    <string name="search_for_text_in_page">Search for %s in %s manpage</string>
    <string name="close_tab">Close %s tab</string>
    <string name="show_release_options">Show release options</string>
    <string name="hide_release_options">Hide release options</string>


    <!-- Man Page Fields -->
    <string name="name">name</string>
    <string name="synopsis">synopsis</string>
    <string name="configuration">configuration</string>
    <string name="description">description</string>
    <string name="option">option</string>
    <string name="exit_status">exit status</string>
    <string name="return_value">return value</string>
    <string name="error">error</string>
    <string name="environment">environment</string>
    <string name="version">version</string>
    <string name="conform">conform</string>
    <string name="notes">notes</string>
    <string name="bugs">bugs</string>
    <string name="example">example</string>
    <string name="author">author</string>
    <string name="seeAlso">see also</string>
    <string name="overview">overview</string>
    <string name="defaults">defaults</string>
    <string name="history">history</string>
    <string name="commands">commands</string>
    <string name="mail">mail</string>
    <string name="site">site</string>
    <string name="syntax">syntax</string>
    <string name="security">security</string>
    <string name="reporting">reporting</string>
    <string name="copyright">copyright</string>
    <string name="finishing_up">Finishing up&#8230;</string>
    <string name="artful">artful</string>
    <string name="bionic">bionic</string>
    <string name="cosmic">cosmic</string>
    <string name="disco">disco</string>
    <string name="eoan">eoan</string>
    <string name="focal">focal</string>
    <string name="groovy">groovy</string>
    <string name="precise">precise</string>
    <string name="trusty">trusty</string>
    <string name="xenial">xenial</string>
    <string name="fetching_data">Loading&#8230;</string>
    <string name="no_internet_descriptions">Must have internet to populate descriptions in database.  They will be saved in app data after the initial pull.</string>
    <string name="info_key_name">NAME</string>
    <string name="info_key_synopsis">SYNOPSIS</string>
    <string name="info_key_example">EXAMPLE</string>
    <string name="info_key_examples">EXAMPLES</string>
    <string name="info_key_options">OPTIONS</string>
    <string name="info_key_description">DESCRIPTION</string>
    <string name="initial_sync_message">Running initial sync to build local command database.</string>
    <string name="unable_to_fetch">Unable to fetch data at this time.</string>
    <string name="close">Close</string>
    <string name="jump_to">Jump To</string>
    <string name="hirsute">hirsute</string>
    <string name="no_data_no_internet">Must have internet to build the local database of commands.  Please restart the app when you are connected to the internet, or press the Re-Sync Data button once connected.</string>
    <string name="release_sync_no_data_no_internet">No data found on device for this release.\nPlease try again when connected to internet.</string>
    <string name="search">Search</string>
    <string name="styles">Font Size Settings</string>
    <string name="colors">Colors</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="third">Third</string>
    <string name="accent">Accent</string>

    <string name="reset">reset</string>
    <string name="font_size">Font size:</string>
    <string name="r_000">Red:</string>
    <string name="b_000">Blue:</string>
    <string name="g_000">Green:</string>
    <string name="_000">000</string>
    <string name="apply">apply</string>
    <string name="the_amount_of_blue_in_your_color_selection">The amount of blue in your color selection</string>
    <string name="the_amount_of_green_in_your_color_selection">The amount of green in your color selection</string>
    <string name="the_amount_of_red_in_your_color_selection">The amount of red in your color selection</string>
    <string name="font">Font:</string>
    <string name="list">List:</string>
    <string name="details_text">Details:</string>
    <string name="no_matches">No matches.</string>
    <string name="no_description">No description available.</string>

    <string name="privacy_policy">No user data is collected by the developer of this app whatsoever.  Locally or via internet. This app connects to \"https://manpages.ubuntu.com/manpages/\" to acquire the data used by this app. It is possible for the connection to ubunut.com\'s manpage site to collect basic data about your device, as well as the ISP through which you are connecting.  <b>The information gathered by ubuntu will be no greater than the data which can be aquired simply by visiting the same site in a web browser.</b>   All permissions requested are used to connect to \"https://manpages.ubuntu.com/manpages/\" and aquire data to be displayed.  The first thing the app does, is pull the name and url of all man pages available for the latest LTS release.  This data populates a local database in app private memory.  As you search man pages, this database is further updated with man page descriptions as well as a list of section header titles.  All viewed manpages (meaning the tab itself was navigated to), will be persisted locally, in app private data.  They are rather small and it would take a while for them to total more than 5MB.  This will allow for offline viewing and save data going forward, for frequently viewed manpages.   This is the extent of the apps functionality.  Everything else is purely related to the UI. ReSyncing or changing versions will wipe both the local database as well as locally saved man pages.  They will repopulate the same as described earlier.</string>
</resources>
