<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/refreshMenuBtn"
        android:title="@string/refresh_button"
        />

    <item
        android:id="@+id/changeReleaseBtn"
        android:title="@string/change_release_button"
        >
        <menu>
            <group android:id="@+id/releaseSubMenu">
                <item android:id="@+id/bionic" android:title="@string/bionic"/>
                <item android:id="@+id/focal" android:title="@string/focal"/>
                <item android:id="@+id/hirsute" android:title="@string/hirsute"/>
                <item android:id="@+id/impish" android:title="impish"/>
                <item android:id="@+id/jammy" android:title="jammy"/>
                <item android:id="@+id/trusty" android:title="@string/trusty"/>
                <item android:id="@+id/xenial" android:title="@string/xenial"/>
            </group>
        </menu>

    </item>

</menu>