<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item
        android:id="@+id/dropDown"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/jump_to"
        app:showAsAction="always">
        <menu>
            <group android:id="@+id/jumpTo">

            </group>
        </menu>
    </item>

    <item
        android:id="@+id/searchButton"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/closeButton"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/close"
        app:showAsAction="always" />


</menu>